# CppLearning

./: .gitignore  CMakeLists.txt  README.md  data_in.txt  main.cpp  main_1.cpp  main_2.cpp  plugin.h  Идеи  мусор
2_lab_cpp/: CMakeLists.txt  in.txt  main.cpp
2_lab_struct/: CMakeLists.txt  main.cpp
2_lab_struct/data/: file_in.txt
counter/: len.h
file_fun/: CMakeLists.txt  main.cpp  мусор
file_fun/libs/: check_file_open.h  error_classes.h  file.h  file_clear.h  file_edit.h  file_read.h  file_read_n.h  file_write.h  library.h
lib/scripts/echo/: echo.cpp  echo.h
lib/scripts/len/: len.h  len_new.h  len_str.h
lib/scripts/list/: List.cpp  List.h
lib/scripts/list/echo/: echo.h
lib/scripts/list/len/: CMakeLists.txt  len.h  len_array.h  len_array_first.h  len_char.h  len_error.h  len_new.h  len_search.h  len_str.h  library.cpp  library.h
lib/scripts/list/search/: search.h
lib/scripts/list/sort/: sort_1.h
lib/syntax/: pascal.h  python.h
lib/syntax/pascal/: begin.h  new_var.h
lib/syntax/python/: count.h  e.h  e_iter.h  for_count.h
lib/syntax/str/: str.h
lib/syntax/string/: string.h
syntax/: pascal.h  python.h
syntax/pascal/: begin.h
syntax/python/: for_count.h  for_iter.h
temp/: 1.cpp  2.h  3.h  code.cpp
test_import_cpp_in_python/: README.md  test.cpp
Тимофій-Бочкор__lab-2_Варіант-2_cpp/: CMakeLists.txt  main.cpp
