cmake_minimum_required(VERSION 3.17)
project(Cpp_Learning)

set(CMAKE_CXX_STANDARD 20)

add_executable(CppLearning main.cpp)
add_executable(CMakeLists CMakeLists.txt)
add_executable(README README.md)
add_executable(main main.cpp)

add_executable(plugin plugin.h)
add_executable(sort_1 lib/scripts/list/sort/sort_1.h)
add_executable(echo lib/scripts/echo/echo.h)
add_executable(search lib/scripts/list/search/search.h)

add_executable(main_1 main_1.cpp)
add_executable(len_array lib/scripts/list/len/len_array_first.h)
add_executable(len lib/scripts/list/len/len.h)
add_executable(len_search lib/scripts/list/len/len_search.h)
add_executable(len_error lib/scripts/list/len/len_error.h)
add_executable(len_array_first lib/scripts/list/len/len_array_first.h)
add_executable(len_new lib/scripts/list/len/len_new.h)
add_executable(Идеи Идеи)
add_executable(len_char lib/scripts/list/len/len_char.h)
add_executable(len_str lib/scripts/list/len/len_str.h)
add_executable(for_iter lib/syntax/python/for_iter.h)
add_executable(for_count lib/syntax/python/for_count.h)
add_executable(count lib/syntax/python/count.h)